name:                simplir-io
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     SimplIR.Format.TrecRunFile,
                       SimplIR.Format.QRel
                       SimplIR.Types.Relevance
                       SimplIR.Format.JsonRunQrels
  other-extensions:    RecordWildCards, OverloadedStrings, ScopedTypeVariables, GeneralizedNewtypeDeriving
  build-depends:       base >=4.11 && <4.17,
                       deepseq >=1.4 && <1.5,
                       text >=1.2 && <2.1,
                       hashable >=1.2 && <1.5,
                       unordered-containers >=0.2 && <0.3,
                       bytestring,
                       zlib >=0.6,
                       aeson >= 1.4,
                       simplir
  hs-source-dirs:      src
  default-language:    Haskell2010
