name:                simplir-pipes-utils
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     SimplIR.Progress,
                       SimplIR.Pipes.Progress,
                       SimplIR.Pipes.Utils,
                       Control.Foldl.Map,
                       Control.Foldl.HashMap,
                       Control.Foldl.Vector,
                       Data.ByteString.Lazy.Progress
  other-extensions:    RankNTypes, OverloadedStrings, BangPatterns
  build-depends:       base >=4.11 && <4.15,
                       bytestring >=0.10 && <0.11,
                       vector,
                       primitive,
                       containers,
                       directory,
                       unordered-containers,
                       hashable,
                       pipes,
                       pipes-safe,
                       pipes-bytestring,
                       aeson,
                       foldl
  hs-source-dirs:      src
  default-language:    Haskell2010
